Modify backend and error-related code
* Add documentation on error messages
* Add more tests and fix more bugs
* Attempt and abandon a backend-ini implementation. This isn't
  possible due to limitations in INI itself that are incompatible
  with DazzleConf's DataTree and Backend APIs. If we implement the
  streaming/type-demand APIs described in the "Not yet implemented"
  part of the readme, then INI might be possible again.